--- a/SurRound/Resources/Info.plist
+++ b/SurRound/Resources/Info.plist
@@ -21,17 +21,17 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs to take photos via camera</string>
+	<string>In order to take photos via camera and attach them to your posts.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>$(PRODUCT_NAME) requires your location</string>
+	<string>Getting access to your current location allows us to display neighboring posts to you and to tag your location in your posts.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>$(PRODUCT_NAME) requires your location</string>
+	<string>Getting access to your current location allows us to display neighboring posts to you and to tag your location in your posts.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>$(PRODUCT_NAME) may need to use your microphone for video recording</string>
+	<string>This is for the purpose of video recording for posting stories.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs to access your photo library</string>
+	<string>In order to select photos from your phone and attach them to your posts.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>$(PRODUCT_NAME) needs to access your photo library</string>
+	<string>In order to select photos from your phone and attach them to your posts.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
